Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999  Horms <horms@vergenet.net>
----------------------------------------------------------------------

xxx
(Horms)

   * Version xxx
   - Fixed minor spelling errors in documentation
   - Added missing library symlings to spec file
   - Server ok line option fixed. Was expecting arguments when it
     has none.
   - Added -lresolv and -lvanessa_logger to build for perdition
     itself to fix compile problems under solaris
   - Added ability to specify columns in MySQL module
     Geoff Mitchell <g.mitchell@videonetworks.com>
   - Running perdition.pop3 and perdition.imap4 now automatically
     runs perdition in POP3 or IMAP4 mode respectively
   - Added connection loging to interaction between perdition
     and clients may be logged for debugging purposes
   - UID in LDAP URL now specified using %s instead of %25s
     (Chris Stratford)

----------------------------------------------------------------------

9th January 2001
(Horms)

   * Version 0.1.6
   - Fixed Bug in specifying port of PostgreSQL server.
     Thanks to Michael J. Maravillo.
   - Fixed Bug in reporting of reauthenication failures in IMAP4 mode
     Thanks to Mike Shirobokov
   - Added logging to libtcp_pipe that is activated by running
     perdition in debug mode
   - LDAP popmap access support added courtesy of ChrisS
   - Fixed compile time dependancies on PAM
   - Added sysconfig file to control init script
   - Split mysql, posgresql and ldap libaries into separage rpm packages
     so perdition can be installed without the dependancies that
     these bring.
   - Added IMAP4REV1 to IMAP4_CAPABILITIES in imap4_write.h to fix
     incompatibility with Outlook 5. Thanks to Valtteri Vuorikoski
   - LDAP popmax fix for values with only one attribute
     courtesy of Jeremy Nelson 
   - Added perdition_LDFLAGS = -Wl,--rpath -Wl,@prefix@ to
     perdition/Makefile.am to aid finding modules. (Removed because debian